--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 h1{
-    font-family: 'Racing Sans One', cursive;
-    font-size: 45px;
-    margin: 20px;
+    font-family: 'Kaisei Tokumin', serif;
+    font-size: 24px;
+    margin: 10px;
+    font-weight: 300;
 }
 .homepage{
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    overflow: auto;
 }
 
 .weatherCard{
+    background-color: white;
     border: 1px solid black;
-    border-radius: 20px;
+    border-radius: 15px;
     padding: 20px 40px;
     display: flex;
-    flex-direction: column;
     width: 500px;
+}
+.weatherCard--main{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+}
+.weatherCard--temp{
+    display: flex;
+}
+.weatherCard--temp > p{
+    font-size: 40px;
+    margin: 0;
+}
+.weatherCard--icon{
+    display: flex;
 }
 
 .weatherCard--stats{
     flex-direction: row;
+    flex-basis: 50%;
     display: flex;
 }
 
@@ -28,20 +47,17 @@ h1{
     margin-right: 40px;
 }
 h2{
-    font-family: 'Racing Sans One', cursive;
+    font-family: 'Kaisei Tokumin', serif;
     font-size: 45px;
+    font-weight: 800;
     margin: 0;
 }
 p{
     font-family: 'Rubik', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 14px;
 }
 
-.weatherCard > p{
-    font-size: 40px;
-    margin: 0;
-}
 
 .city-navbar {
     margin-bottom: 20px;
