--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 h1{
     font-family: 'Kaisei Tokumin', serif;
     font-size: 24px;
+    font-weight: 300;
     margin: 10px;
+}
+h2{
+    font-family: 'Kaisei Tokumin', serif;
+    font-size: 34px;
+    font-weight: 800;
+    margin: 0;
+}
+p{
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
     font-weight: 300;
 }
+
 .homepage{
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     min-height: 100vh;
     overflow: auto;
 }
@@ -17,51 +30,47 @@ h1{
     background-color: white;
     border: 1px solid black;
     border-radius: 15px;
-    padding: 20px 40px;
     display: flex;
-    width: 500px;
+    padding: 30px 40px;
+    width:450px;
 }
 .weatherCard--main{
+    align-items: center;
     display: flex;
-    flex-direction: column;
     flex-basis: 50%;
+    flex-direction: column;
+    padding-right: 40px;
 }
 .weatherCard--temp{
     display: flex;
-}
-.weatherCard--temp > p{
-    font-size: 40px;
+    font-size: 50px;
     margin: 0;
 }
-.weatherCard--icon{
+
+.svg-inline--fa {
+    display: flex;
+    height: 60px;
+    width: 60px;
+}
+.weatherCard--type{
     display: flex;
 }
 
 .weatherCard--stats{
-    flex-direction: row;
-    flex-basis: 50%;
+    align-items: center;
     display: flex;
+    flex-basis: 50%;
+    flex-direction: row;
 }
 
 .weatherCard--stats > div {
     margin-right: 40px;
 }
-h2{
-    font-family: 'Kaisei Tokumin', serif;
-    font-size: 45px;
-    font-weight: 800;
-    margin: 0;
-}
-p{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-}
 
 
 .city-navbar {
-    margin-bottom: 20px;
     font-size: 10px;
+    margin-bottom: 20px;
 }
 .city-navbar a{
     border-radius: 5px;
